Corrected summary widget spacing

--- a/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
+++ b/public_html/layouts/basic/styles/libraries/_Bootstrap.scss
@@ -137,3 +137,8 @@ label.btn[class*="btn-outline-"] {
 		}
 	}
 }
+.input-group-sm {
+	.form-control {
+		@extend .form-control-sm;
+	}
+}
